# FlowtileWM

./: .gitignore  Cargo.toml
apps/cli/: Cargo.toml
apps/core-daemon/: Cargo.toml  build.rs  flowtile-core-daemon-uiaccess.manifest  flowtile-core-daemon.manifest
apps/core-daemon/scripts/: observe-hotkeys.ps1
apps/core-daemon/src/: cli.rs  control.rs  diag.rs  flowshell_core.rs  hotkeys.rs  ipc.rs  main.rs  manual_resize.rs  overview_controller.rs  overview_engine.rs  overview_surface.rs  projection.rs  tab_indicator.rs  terminal.rs  touchpad.rs  watch.rs  win32_overlay.rs  window_actions.rs
apps/core-daemon/src/hotkeys/: low_level.rs  mod.rs
apps/core-daemon/src/overview_surface/: backdrop.rs  common.rs  preview.rs  shell.rs  tests.rs  thumbnail.rs  windowing.rs  worker.rs
apps/core-daemon/src/touchpad/: assessment.rs  bindings.rs  native.rs  recognizer.rs  runtime.rs
apps/core-daemon/src/watch/: commands.rs  control_plane.rs  runtime_cycle.rs  startup.rs  support.rs
apps/touchpad-helper/: DaemonCommandClient.cs  Flowtile.TouchpadHelper.csproj  GestureRecognizer.cs  HiddenTouchpadWindow.cs  Logger.cs  Program.cs  TouchpadContact.cs  TouchpadGestureExtensions.cs  TouchpadRawInput.cs
config/: flowtile.kdl
crates/config-rules/: Cargo.toml
crates/ipc/: Cargo.toml
crates/windows-adapter/: Cargo.toml
scripts/: bootstrap.ps1  check.ps1  prepare-uiaccess-touchpad.ps1  start-dev-runtime.ps1  start-hybrid-surrogate-smoke.ps1  start-touchpad-dev.ps1  start-wm-only.ps1  test-system.ps1
ui/ui-host/: DiagnosticsWindow.xaml  DiagnosticsWindow.xaml.cs  (+5 more)
(+43 files in other folders)
